Fix stylesheet with <pre> to wrap text.

--- a/Resources/public/css/zetamailview.css
+++ b/Resources/public/css/zetamailview.css
@@ -18,3 +18,10 @@ table.zetaMailHeaderBox td {
 #zetaPrivacyNotice img {
     vertical-align: text-bottom;
 }
+pre {
+  white-space: pre-wrap; 
+  white-space: -moz-pre-wrap !important;
+  white-space: -pre-wrap; 
+  white-space: -o-pre-wrap; 
+  word-wrap: break-word; 
+}
